--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>KB Q&A</title>
+    <title>Prophecy KB Q&A</title>
   </head>
   <body>
     <div id="root"></div>
